bugfix: area for dropping is now visible in categories settings page

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -295,6 +295,13 @@
   #draggable
     margin: 0
 
+  .action-area
+        
+    #droppable
+      min-height: 30px
+      border: 1px solid #f7fcfe
+      padding-left: 10px
+      +border-radius(4px)
   p
     color: #fff
     font-weight: bold
